# lfi-runtime

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: test.yaml
core/: arch_asm.c  arch_asm.h  box.c  boxmap.c  boxmap.h  core.c  core.h  ctx.c  engine.c  error.c  extalloc.c  log.c  log.h  meson.build  mmap.c  mmap.h  trampoline.c
core/arch/arm64/: arch_callback.h  callback.S  callback.c  meson.build  regs.c  runtime.S  trampoline.S
core/arch/riscv64/: arch_callback.h  callback.S  callback.c  regs.c  runtime.S  trampoline.S
core/arch/x64/: arch_callback.h  callback.S  callback.c  meson.build  regs.c  runtime.S  trampoline.S  trapsys.c
core/include/: lfi_arch.h  lfi_core.h
core/test/: box.c  init.c  meson.build  test.h  test_box.c  test_ctx.c  test_init.c  test_mmap.c  test_pku.c  test_progs.h  test_segue_multibox.c  test_trampoline.c  test_trampoline_clone.c
examples/: meson.build
examples/add/: main.cpp  meson.build
examples/bench/: main.cpp  meson.build
examples/callback/: main.cpp  meson.build
examples/inout/: main.cpp  meson.build
examples/shm/: main.cpp  meson.build
examples/static/: main.cpp  meson.build
examples/threads/: lib_threads.c  main.cpp  meson.build
linux/: align.h  buf.c  buf.h  cwalk.c  cwalk.h  debugger.c  debugger.h  defer.h  elfdefs.h  elfload.c  elfload.h  elfsym.c  elfsym.h  fd.c  fd.h  file.c  file.h  futex.h  futex_linux.c  futex_macos.c  futex_pthread.c  host.c  host.h  jitcode.c  jitcode.h  linux.c  linux.h  list.c  list.h  lock.h  log.h  meson.build  path.c  path.h  perf.c  proc.c  proc.h  sys.c  sys.h  sys_minimal.c  (+4 more)
linux/arch/arm64/: arch_sys.h  arch_types.h  sys.c
linux/arch/riscv64/: arch_sys.h  arch_types.h  meson.build  sys.c
linux/arch/x64/: arch_sys.h  arch_types.h  sys.c
linux/include/: lfi_linux.h
linux/sys/: meson.build  sys.h  sys_arch_prctl.c  sys_brk.c  sys_chdir.c  sys_chmod.c  sys_clock_gettime.c  sys_clone.c  sys_close.c  sys_dup.c  sys_dup3.c  sys_exit.c  sys_exit_group.c  sys_faccessat.c  sys_fchdir.c  sys_fchmod.c  sys_fchown.c  sys_fcntl.c  sys_fsync.c  sys_ftruncate.c  sys_futex.c  sys_getcwd.c  sys_getdents64.c  sys_getrandom.c  sys_getrlimit.c  sys_gettid.c  sys_ioctl.c  sys_jitcode.c  sys_lfi_pause.c  sys_lseek.c  sys_mkdirat.c  sys_mmap.c  sys_mprotect.c  sys_munmap.c  sys_nanosleep.c  sys_newfstatat.c  sys_none.c  sys_openat.c  sys_passthrough.c  sys_prctl.c  (+18 more)
linux/test/: meson.build  run.go  test.h  test_argv_mismatch.c  test_detach.c  test_init.c  test_lib.c  test_reload.c  test_run.c
linux/test/programs/: a.out  access.c  access.c.out  alloc.c  argv.c  chdir.c  chdir.c.out  dup.c  dup.c.out  envp.c  envp.c.out  fs.c  futex.c  hello.c  mkdir.c  mmap.c  random.c  rename.c  rename.c.out  stat.c  stat.c.out  thread.c  time.c  truncate.c  truncate.c.out  uname.c  uname.c.out
linux/test/programs/inputs/: rename.txt
sbox/: README.md  lfi.cpp  meson.build
sbox/include/sbox/: lfi.h  passthrough.h  sbox.h
sbox/test/: meson.build  test_helpers.h  test_lfi_arithmetic.cpp  test_lfi_callbacks.cpp  test_lfi_detach.cpp  test_lfi_fn_handles.cpp  test_lfi_memory.cpp  test_lfi_misc.cpp  test_lfi_multi_sandbox.cpp  test_lfi_pointers.cpp  test_lfi_strings.cpp  test_lfi_structs.cpp  test_memory.inc.cpp  test_misc.inc.cpp  test_passthrough_arithmetic.cpp  test_passthrough_callback_cross_sandbox.cpp  test_passthrough_callbacks.cpp  test_passthrough_fn_handles.cpp  test_passthrough_memory.cpp  test_passthrough_misc.cpp  test_passthrough_multi.cpp  test_passthrough_multi_sandbox.cpp  test_passthrough_pointers.cpp  test_passthrough_reentrant.cpp  test_passthrough_strings.cpp  test_passthrough_structs.cpp  test_strings.inc.cpp  test_threads.cpp  testlib.c
sbox/test/compile_fail/: raw_callback_arg.cpp  raw_pointer_arg.cpp  wrong_callback_type.cpp  wrong_data_ptr_type.cpp
subprojects/: argtable3.wrap  clean.sh  cwalk.wrap  download.sh  fadec.wrap  lfi-verifier.wrap  lfiv.wrap  libboxmap.wrap  libelf.wrap  libmmap.wrap  minialloc.wrap
subprojects/lfi-verifier/: meson.build
subprojects/libelf-bsd/: libelf_msize.m4
subprojects/packagefiles/lfi-verifier/: meson.build
subprojects/packagefiles/minialloc/: meson.build
toolchains/: aarch64-android.meson  aarch64-linux-clang.meson  aarch64-linux-pac.meson  riscv64-linux-clang.meson  x86_64-linux-clang.meson
tools/: lfi_run.c  meson.build
tools/lfi-run/: main.c  meson.build
tools/lfi-ubench/: lib.c  main.c  meson.build
