option('max_futexes',
  type: 'integer',
  min: 1,
  max: 16384,
  value: 512,
  description: 'maximum number of futexes per sandbox')

option('enable_dyld',
  type: 'boolean',
  value: true,
  description: 'enable loading of dynamically-linked executables')

option('enable_tlsdesc',
  type: 'boolean',
  value: false,
  description: 'enable use of TLS descriptors (more efficient TLS) on x86-64; requires libc TLSDESC support')

option('enable_tlsexec',
  type: 'boolean',
  value: false,
  description: 'enable exec TLS (more efficient); liblfi will no longer be usable in a dlopened context')

option('enable_analyzer',
  type: 'boolean',
  value: false,
  description: 'pass -fanalyzer to enable the GCC static analyzer')

option('stores_only_trampoline',
  type: 'boolean',
  value: false,
  description: 'assume stores-only mode for trampolines - disables a routine that zeroes all registers to prevent leakage')
