srcs += files(
  'sys_none.c',
  'sys_arch_prctl.c',
  'sys_set_tid_address.c',
  'sys_ioctl.c',
  'sys_write.c',
  'sys_writev.c',
  'sys_exit_group.c',
  'sys_brk.c',
  'sys_mmap.c',
  'sys_mprotect.c',
  'sys_munmap.c',
  'sys_sched_getaffinity.c',
  'sys_clone.c',
  'sys_sched_yield.c',
  'sys_futex.c',
  'sys_exit.c',
  'sys_gettid.c',
)
