# Files needed for both modes
srcs += files(
  'sys_arch_prctl.c',
  'sys_brk.c',
  'sys_exit.c',
  'sys_exit_group.c',
  'sys_lfi_pause.c',
  'sys_mmap.c',
  'sys_munmap.c',
  'sys_none.c',
)

# Files only needed for full runtime (not sys_minimal)
if not get_option('sys_minimal')
  srcs += files(
    'sys_chdir.c',
    'sys_chmod.c',
    'sys_clock_gettime.c',
    'sys_clone.c',
    'sys_close.c',
    'sys_dup.c',
    'sys_dup3.c',
    'sys_faccessat.c',
    'sys_fchdir.c',
    'sys_fchmod.c',
    'sys_fchown.c',
    'sys_fsync.c',
    'sys_ftruncate.c',
    'sys_futex.c',
    'sys_getcwd.c',
    'sys_getdents64.c',
    'sys_getrandom.c',
    'sys_getrlimit.c',
    'sys_gettid.c',
    'sys_ioctl.c',
    'sys_lseek.c',
    'sys_mkdirat.c',
    'sys_mprotect.c',
    'sys_nanosleep.c',
    'sys_newfstatat.c',
    'sys_openat.c',
    'sys_passthrough.c',
    'sys_prctl.c',
    'sys_pread64.c',
    'sys_pwrite64.c',
    'sys_read.c',
    'sys_readlinkat.c',
    'sys_readv.c',
    'sys_renameat.c',
    'sys_renameat2.c',
    'sys_sched_getaffinity.c',
    'sys_sched_yield.c',
    'sys_set_tid_address.c',
    'sys_sysinfo.c',
    'sys_time.c',
    'sys_truncate.c',
    'sys_unlinkat.c',
    'sys_uname.c',
    'sys_write.c',
    'sys_writev.c',
  )
endif
